@@ -1,3 +1,9 @@
+2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-window.c (gdict_window_lookup_end_cb): use ngettext to
+	use the correct localized plural form (patch by Gabor Kelemen,
+	closes bug #332383).
+
 2006-02-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* src/gdict-applet.c (show_error_dialog): check if parent is NULL
